--- a/TaxiUsuario/app/src/main/AndroidManifest.xml
+++ b/TaxiUsuario/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".Splash">
+        <activity android:name=".View.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,26 +29,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Login"
+            android:name=".View.Login.Login"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
-            android:name=".Register"
-            android:parentActivityName=".Login"
+            android:name=".View.Submit.Submit"
+            android:parentActivityName=".View.Login.Login"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Login" />
+                android:value=".View.Login.Login" />
         </activity>
         <activity
-            android:name=".RememberPassword"
-            android:parentActivityName=".Login"
+            android:name=".View.RememberPass.RememberPassword"
+            android:parentActivityName=".View.Login.Login"
             android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Login" />
+                android:value=".View.Login.Login" />
         </activity>
         <activity
-            android:name=".Home"
+            android:name=".View.Home.Home"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.AppCompa.NoActionBar2"></activity>
 
