Commit NavigationBottom corregido
Implementación de interfaz NavigationBottom

--- a/Usuario/app/build.gradle
+++ b/Usuario/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.valhallasoft.usuariotaxa"
         minSdkVersion 18
         targetSdkVersion 25
@@ -26,12 +27,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:design:25.2.0'
-    compile 'com.google.android.gms:play-services:10.2.0'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
-    compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.android.support:multidex:1.0.0'
+    compile 'com.android.support:multidex:1.0.1'
     compile 'junit:junit:4.12'
     compile 'com.android.support:support-vector-drawable:25.2.0'
     compile 'org.jetbrains:annotations-java5:15.0'
