--- a/Usuario/app/src/main/AndroidManifest.xml
+++ b/Usuario/app/src/main/AndroidManifest.xml
@@ -30,13 +30,13 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".View.Login.Login"
+            android:name=".View.Login.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar2" />
         <activity
-            android:name=".View.Submit.Submit"
+            android:name=".View.Submit.SubmitActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar2" />
         <activity
-            android:name=".View.Home.Home"
+            android:name=".View.Home.HomeActivity"
             android:label="@string/title_activity_home"></activity>
     </application>
 
